--- a/app.json
+++ b/app.json
@@ -11,14 +11,16 @@
       "resizeMode": "contain",
       "backgroundColor": "#fff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/attendance.png",
-        "backgroundColor": "#4f46e5"
+        "backgroundColor": "#fff"
       },
       "package": "com.soham5713.oopspresent"
     },
@@ -27,7 +29,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "620493e7-2170-40f9-941c-7e39de8976be"
+        "projectId": "a0b3a2dd-50c4-4c12-a104-054a047f2e9a"
       }
     }
   }
