--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-native": "0.76.9",
     "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-date-picker": "^5.0.12",
     "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-month-year-picker": "^1.9.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
