--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oops-present-app",
-  "version": "2.0.0",
+  "version": "2n.0.0",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
@@ -37,7 +37,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-updates": "~0.27.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
