--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-print": "^14.0.3",
     "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.4",
     "firebase": "^11.6.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -37,12 +38,12 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
-    "expo-updates": "~0.27.4"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "typescript": "^5.3.3"
   },
   "private": true
